chore: fix some deprecation warnings